-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u112
-
Component/s: hotspot
-
b175
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8182813 | 10 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b14 |
| JDK-8182519 | 9.0.4 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8197272 | 8u192 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8195277 | 8u172 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b03 |
| JDK-8190589 | 8u171 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8185810 | 8u162 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8184697 | 8u161 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8182567 | 8u152 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | team |
| JDK-8185198 | 8u144 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b31 |
| JDK-8183967 | 8u141 | Poonam Bajaj Parhar | P3 | Closed | Fixed | b31 |
| JDK-8198041 | emb-8u171 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8192243 | emb-8u161 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8203785 | 7u201 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b01 |
| JDK-8206168 | 7u191 | Poonam Bajaj Parhar | P3 | Resolved | Fixed | b31 |
| JDK-8204658 | 7u181 | Poonam Bajaj Parhar | P3 | Closed | Fixed | b31 |
After throwing the OutOfMemoryErrors the worker threads are waiting for the
next requests but the Service-Thread takes a processor 100%.
- backported by
-
JDK-8182519 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8182567 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8182813 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8184697 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8185198 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8185810 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8190589 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8192243 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8195277 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8197272 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8198041 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8203785 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8206168 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Resolved
-
-
JDK-8183967 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Closed
-
-
JDK-8204658 OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%
-
- Closed
-