8178536: OOM ERRORS + SERVICE-THREAD TAKES A PROCESSOR TO 100%

Clear the pending OOM exception in SensorInfo::trigger()

Reviewed-by: mchung, dcubed